Fixed Sonar Issue for Rule: Integer Instantiation